--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@limuen/tsconfig/base.json",
+  "extends": "@limuen/ts-config/base.json",
   "compilerOptions": {},
   "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": ["node_modules"]
