--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "happy-dom": "^16.0.1",
     "husky": "^9.0.11",
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.7",
