--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,13 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@limuen/ts-config": "workspace:*"
+    "@limuen/ts-config": "workspace:*",
+    "tsup": "^8.0.2"
   }
 }
