--- a/turbo.json
+++ b/turbo.json
@@ -3,24 +3,24 @@
   "globalEnv": [".env"],
   "tasks": {
     "defaultProject#dev": {
-      "dependsOn": ["@limuen/viteconfig#build"],
+      "dependsOn": ["@limuen/vite-config#build", "@limuen/core#build"],
       "cache": false,
       "persistent": true,
       "env": [".env.development.local", ".env.development", ".env.local", ".env"]
     },
     "defaultProject#build": {
-      "dependsOn": ["@limuen/viteconfig#build"],
+      "dependsOn": ["@limuen/vite-config#build", "@limuen/core#build"],
       "outputs": ["dist/**"],
       "env": [".env.development.local", ".env.development", ".env.local", ".env"]
     },
     "react-low-code#dev": {
-      "dependsOn": ["@limuen/viteconfig#build"],
+      "dependsOn": ["@limuen/vite-config#build", "@limuen/core#build"],
       "cache": false,
       "persistent": true,
       "env": [".env.development.local", ".env.development", ".env.local", ".env"]
     },
     "react-low-code#build": {
-      "dependsOn": ["@limuen/viteconfig#build"],
+      "dependsOn": ["@limuen/vite-config#build", "@limuen/core#build"],
       "outputs": ["dist/**"],
       "env": [".env.development.local", ".env.development", ".env.local", ".env"]
     },
