--- a/apps/react19-feature/package.json
+++ b/apps/react19-feature/package.json
@@ -22,8 +22,11 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
     "code-inspector-plugin": "^0.18.3",
     "globals": "^15.14.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^5.3.2"
