--- a/apps/react19-feature/package.json
+++ b/apps/react19-feature/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@limuen/core": "workspace:*",
+    "motion": "^11.15.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^6.23.1"
@@ -29,6 +30,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^5.3.2"
+    "vite": "^5.3.2",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
