--- a/apps/react19-feature/package.json
+++ b/apps/react19-feature/package.json
@@ -14,7 +14,10 @@
     "motion": "^11.15.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-syntax-highlighter": "^15.6.1",
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -22,6 +25,7 @@
     "@limuen/vite-config": "workspace:*",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
     "code-inspector-plugin": "^0.18.3",
