--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@limuen/ts-config/base.json",
   "compilerOptions": {},
-  "include": ["**/*.ts", "**/*.d.ts"],
+  "include": ["**/*.ts", "**/*.d.ts", "typings/**/*"],
   "exclude": ["node_modules"]
 }
