--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@limuen/ts-config/base.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "types": ["node", "vite/client"]
+  },
   "include": ["**/*.ts", "**/*.d.ts", "typings/**/*"],
   "exclude": ["node_modules"]
 }
